# devops-webapp-python

./: .hadolint.yaml  Dockerfile  README.md  docker-compose.yml  launch.sh  pyproject.toml  requirements.txt
.devops/: docker-build.yml
Dockerfiles/: app.dockerfile
app/: main.py
